# minimal-oap-demo

./: .env.example  .gitignore  LICENSE  README.md  config.py  logger.py  orchestrator.logs  pyproject.toml  start_agents.sh  stop_agents.sh  test_demo.py
math_agent/: agent.py  langgraph.json
supervisor/: agent.py  langgraph.json
text_agent/: agent.py  langgraph.json
