[project]
name = "minimal-oap-demo"
version = "0.1.0"
description = "Minimal OAP-like system showcasing configuration-driven multi-agent orchestration"
authors = [
    {name = "Demo Author", email = "demo@example.com"}
]
requires-python = ">=3.11.0,<3.13"
dependencies = [
    "langgraph>=0.6.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "langgraph-supervisor>=0.0.27",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.3.6",
    "ruff>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "math_agent",
    "text_agent", 
    "supervisor",
    "config.py",
    "logger.py"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long, handled by black
]